# Gesture-Calculator

./: .gitignore  .prettierignore  .prettierrc.json  README.md  package-lock.json  package.json
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: history.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: history.py
backend/app/repositories/: history.py
backend/app/schemas/: history.py
backend/gesture_calculator_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.example  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: calculator-dashboard.tsx  camera-panel.tsx  expression-panel.tsx  gesture-legend-panel.tsx  history-panel.tsx
frontend/hooks/: use-gesture-calculator.ts
frontend/lib/: api.ts  calculator.ts  gesture-mapper.ts  types.ts
