[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gesture-calculator-backend"
version = "0.1.0"
description = "FastAPI backend untuk gesture calculator history"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "pydantic-settings>=2.6.1,<3.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

